--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ p {
   font-size: 1.2rem;
   font-weight: 900;
   color: hsl(224, 23%, 55%);
-  transition: colour 0.3s;
+  transition: color 0.3s;
 }
 
 .order-link:hover,
